--- a/config/ja.yml
+++ b/config/ja.yml
@@ -1,9 +1,9 @@
 ---
-ja：
-  activerecord：
-    エラー：
-      メッセージ：
-        record_invalid：'バリデーションに失敗しました：％{errors} '
+ja:
+  activerecord:
+    エラー:
+      メッセージ:
+        record_invalid : 'バリデーションに失敗しました：％{errors}'
         restrict_dependent_destroy：
           has_one："％{record}が存在しているので削除できません"
           has_many："％{record}が存在しているので削除できません"
